make the stack item animation smooth, fix the bug when the parent collapses only when the child disappears completely and jittery animation because of gaps

--- a/src/components/ui/Stack/Stack.module.css
+++ b/src/components/ui/Stack/Stack.module.css
@@ -9,9 +9,17 @@
     --stack-padding-inline: var(--stack-padding-size);
     --stack-half-gap: calc(var(--stack-gap-size) / 2);
 }
+/* 
+.directionColumn>*:not(:last-child) {
+    margin-bottom: var(--stack-gap-size);
+}
+
+.directionRow>*:not(:last-child) {
+    margin-bottom: var(--stack-gap-size);
+} */
 
 .directionRow {
-    flex-direction: row; 
+    flex-direction: row;
 }
 
 .directionColumn {
