--- a/src/features/TestConstructor/ui/Question/MatchPairsQuestion/MatchPairsQuestion.module.css
+++ b/src/features/TestConstructor/ui/Question/MatchPairsQuestion/MatchPairsQuestion.module.css
@@ -23,7 +23,7 @@
 
 .pair-actions {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
 }
 
